style.css
body {
    background-color: #a0a081;
}

.navbar {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: #a0a081;
    align-items: center;
    overflow: hidden;
    position: fixed;
    top: 0;
    width: 100%;
    padding-top: 25px;
    padding-bottom: 25px;
}

#logo {
    text-align: center;
    margin: 0%;
}

#white-logo {
    text-align: center;
    margin: 0%;
    color: white;
}

.tighter-text {
    display: flex;
    padding-top: 100px;
    margin: 0px;
    flex-direction: column;    
}

.pre-order-text {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: x-large;
}

.pre-order-text-col {
    display: flex;
    align-items: center;
    justify-content: center;
}

#paraspaced {
    margin-right: 5px;
    margin-left: 5px;
    font-size: x-large;
}

.container {
    position: absolute;
    top: 300px;
    right: 700px;
    width: 1800px;
    height: 800px;
    background-color: white;
    border: 1px solid white;
}

.inner-image {
    position: absolute;
    top: 50px;
    right: 50px;
    width: 800px;
    height: 700px;
}

.inner-text1 {
    font-size: 100px;
    position: absolute;
    left: 300px;
    top: 50px;
    color: #a0a081;
}
.inner-text2 {
    font-size: 100px;
    position: absolute;
    left: 250px;
    top: 120px;
    color: #a0a081;
}
.inner-text3 {
    font-size: 120px;
    position: absolute;
    left: 380px;
    top: 170px;
    color: black;
}
.inner-text4 {
    font-size: 135px;
    position: absolute;
    left: 360px;
    top: 240px;
    color: black;
}
.pre-order-inner{
    font-size: 40px;
    position: absolute;
    left: 360px;
    top: 470px;
    color: #a0a081;
    border: solid thick #a0a081;
}
.pre-save-inner{
    font-size: 40px;
    position: absolute;
    left: 366px;
    top: 548px;
    color: #a0a081;
    border: solid thick #a0a081;
}

.vinyl-cd-cas{
    display: flex;
    justify-content: space-evenly;
}

.underlines{
    display: flex;
    justify-content: space-evenly;
}
.underline1{
    border: solid thick black;
    width: 300px;
}
.underline2{
    border: solid thick black;
    width: 300px;
}
.underline3{
    border: solid thick black;
    width: 300px;
}
.underline4{
    border: solid thick black;
    width: 300px;
}

.vinyl-cd-cas-links{
    display: flex;
    justify-content: space-evenly; /*Sort these out*/
    font-size: 35px;
}

#heading-center{
    font-size: 60px;
    text-align: center;
}
#heading2-center{
    font-size: 40px;
    text-align: center;
}

.container1 {
    position: absolute;
    top: 2500px;
    right: 700px;
    width: 1800px;
    height: 400px;
    /*background-color: white;
    border: 1px solid white;*/ /*Uncomment when touching up */
}
.live-container{
    display: flex;
    font-size: 35px;
    justify-content: space-evenly;
}

.link-box{
    border: solid thick black;
    font-size: x-large;
}

.video-index{
    display: flex;
    justify-content: center;
}

.news-box{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.mailing-list{
    display: flex;
    justify-content: center;
}

